--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 .page-body {
     font-family: var(--primary-font);
     background-color: var(--background-main-color);
+    color: var(--secondary-text-color);
 }
 a, a:active {
     text-decoration: none;
