--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --secondary-bg: #F4F4FD;
     --cornflower:  #E7E9FC;
     --cloud: #f4f4fd;
+    --ocean: #404BBF;
 }
 .page-body {
     font-family: var(--primary-font);
@@ -170,14 +171,18 @@ color: var(--background-main-color);
     background-color: #fff;
 }
 .portfolio-btn {
-
-background: var(--cloud);
+color: var(--logo-color);
+background-color: var(--cloud);
 font-size: 16px;
 
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
 cursor: pointer;
+}
+.portfolio-btn:hover, .portfolio-btn:focus {
+    background-color: var(--ocean);
+    color: #ffffff;
 }
 
 
